--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,312 +1,28 @@
 <!DOCTYPE html>
-<html lang="us">
-<head>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
-
-        gtag('config', 'UA-162211947-1');
-    </script>
+<html lang="en">
+  <head>
     <meta charset="utf-8">
-    <script src="https://kit.fontawesome.com/5a6d480b7c.js" crossorigin="anonymous"></script>
-    <title>The Hat Online</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-162211947-1');
+    </script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-162211947-1"></script>
-</head>
-
-<body>
-
-<div class="columns is-mobile is-centered">
-    <div class="column is-fullwidth" style="padding: 50px; ">
-        <div class="box" style="">
-            <button id="sign-out" class="button">
-                <span class="icon is-small">
-                    <i class="fas fa-sign-out-alt"></i>
-                </span>
-            </button>
-            <div class="card disabled" id="info-card" style="padding:10px; float: right; position: absolute; top: 10px; right: 10px; z-index: 1;">
-                <div id="user-info" class="disabled" style="padding: 1px">
-                    <span class="icon is-small">
-                        <i class="fas fa-user"></i>
-                    </span>
-                    <span id="user-info-label"></span>
-                </div>
-                <br/>
-                <div id="room-info" class="disabled" style="padding: 3px">
-                    <span class="icon is-small">
-                        <i class="fas fa-home"></i>
-                    </span>
-                    <span id="room-info-label"></span>
-                </div>
-            </div>
-            <div class="has-text-centered">
-                <div class="page" id="login-page">
-                    <div class="title">
-                        Welcome to the Hat! Please, introduce yourself.
-                    </div>
-                    <div class="field">
-                        <div class="control has-icons-left">
-                            <input id="username-field" class="input" type="text">
-                            <span class="icon is-small is-left">
-                                <i class="fas fa-user"></i>
-                            </span>
-                        </div>
-                    </div>
-                    <button id="to-join-button" class="button is-info is-light is-large">Join room</button>
-                    <button id="create-button" class="button is-info is-light is-large">Create room</button>
-                </div>
-
-
-                <div class="page disabled" id="join-page">
-                    <div class="title">
-                        What room?
-                    </div>
-                    <div class="control has-icons-left">
-                        <input id="room-field" class="input" type="text">
-                        <span class="icon is-small is-left">
-                    <i class="fas fa-home"></i>
-                </span>
-                    </div>
-                    <br/>
-                    <button id="join-button" class="button is-info is-light">Join</button>
-                </div>
-
-
-                <div class="page disabled" id="room_page">
-                    <div class="title">
-                        Room
-                        <span id="room-name">генерал-фельдмаршал</span>
-                    </div>
-                    <div class="participants">
-                            <span class="tag">
-                                Aleksandr
-                            </span>
-                        <span class="tag">
-                                Aleksandr
-                            </span>
-                        <span class="tag">
-                                Aleksandr
-                            </span>
-                        <span class="tag">
-                                Dog
-                            </span>
-                    </div>
-                    <br/>
-                    <div class="subtitle">
-                        Settings
-                    </div>
-
-                    <span class="tag stag">
-                            Time
-                        </span>
-                    <input id="time_slider" class="slider has-output is-fullwidth" min="0" max="100" value="50" step="1" type="range">
-                    <span class="tag is-info is-light dtag"><output for="time_slider">50</output></span>
-                    <span class="tag stag">
-                            Words
-                        </span>
-                    <input id="words_slider" class="slider has-output is-fullwidth" min="0" max="100" value="50" step="1" type="range">
-                    <span class="tag is-info is-light dtag"><output for="words_slider">50</output></span>
-                    <br/>
-                    <span class="tag stag">
-                            Difficulty
-                        </span>
-                    <input id="difficulty_slider" class="slider has-output is-fullwidth" min="0" max="100" value="50" step="1" type="range">
-                    <span class="tag is-info is-light dtag"><output for="difficulty_slider">50</output></span>
-
-                    <span class="tag stag">
-                            Dispersion
-                        </span>
-                    <input id="dispersion_slider" class="slider has-output is-fullwidth" min="0" max="100" value="50" step="1" type="range">
-                    <span class="tag is-info is-light dtag"><output for="dispersion_slider">50</output></span>
-
-                    <br/>
-                    <br/>
-                    <button id="init-game" class="button is-success is-light is-large">Start</button>
-                </div>
-
-                <div class="page disabled" id="next-round">
-                    <div class="subtitle">
-                        Next round
-                    </div>
-                    <span class="player1 tag is-light is-info is-large">
-                        Aleksandr
-                    </span>
-
-                    <span class="tag is-light is-large">
-                        explains words to
-                    </span>
-
-                    <span class="player2 tag is-light is-info is-large">
-                        Dog
-                    </span>
-                    <br/>
-                    <br/>
-                    <button id="go-round" class="button is-success is-light is-large">Go</button>
-                </div>
-                <div class="page disabled" id="running-round-play">
-                    <span class="player1 tag is-light is-info is-large">
-                        Aleksandr
-                    </span>
-                    <span class="tag is-light is-large">
-                        explains words to
-                    </span>
-                    <span class="player2 tag is-light is-info is-large">
-                        Dog
-                    </span>
-                    <br/>
-<!--                    <span class="tag is-info">-->
-<!--                        2 hits-->
-<!--                    </span>-->
-                    <br/>
-                    <br/>
-                    <progress id="time_left" class="progress bar is-medium" value="60" max="100"></progress>
-                    <br/>
-                    <br/>
-
-                    <div class="game-control">
-                    <span id="word" class="main-word tag is-light is-large">
-                        авторадио
-                    </span>
-
-                    <br/>
-                    <br/>
-                        <button id="mistake" class="button is-danger is-light">Mistake</button>
-                        <button id="give-up" class="button is-light">Give up</button>
-                        <button id="correct" class="button is-success is-light">Correct</button>
-                    </div>
-                </div>
-                <div class="page disabled" id="game-over-page">
-                    <table class="table is-fullwidth">
-                        <thead>
-                            <tr>
-                                <th>Player</th>
-                                <th>Guesses</th>
-                                <th>Explanations</th>
-                                <th>Mistakes</th>
-                                <th>Points</th>
-                            </tr>
-                        </thead>
-                        <tbody id="stats">
-                            <tr>
-                                <td>Aleksandr</td>
-                                <td>5</td>
-                                <td>7</td>
-                                <td>7</td>
-                                <td>12</td>
-                            </tr>
-                            <tr>
-                                <td>Dog</td>
-                                <td>7</td>
-                                <td>5</td>
-                                <td>5</td>
-                                <td>12</td>
-                            </tr>
-                        </tbody>
-                    </table>
-                    <button id="reset_button" class="button is-success is-light">OK</button>
-                </div>
-                <div class="page disabled" id="countdown-page">
-                    <div id="countdown">
-                    </div>
-                </div>
-        </div>
-        </div>
-    </div>
-</body>
+    <script src="https://kit.fontawesome.com/5a6d480b7c.js" crossorigin="anonymous"></script>
+    <meta charset="utf-8">
+    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <title>Hat online</title>
+  </head>
+  <body>
+    <noscript>
+      <strong>We're sorry but Hat Online doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+    </noscript>
+    <div id="app"></div>
+    <!-- built files will be auto injected -->
+  </body>
 </html>
-
-<style>
-    .stag {
-        width: 80px;
-    }
-
-    .dtag {
-        width: 40px;
-    }
-
-    .disabled {
-        display: none !important;
-    }
-
-    .main-word {
-        font-size: 50px !important;
-    }
-
-    #countdown-page {
-        display: inline-block;
-        text-align: center;
-    }
-
-    .online {
-        color: #1abc9c;
-        font-weight: bold;
-        text-align: center;
-        margin: 3px;
-    }
-
-    .offline {
-        color: #e74c3c;
-        font-weight: bold;
-        text-align: center;
-        margin: 3px;
-    }
-
-    .bar {
-        /*transform: rotate(0.5turn);*/
-    }
-
-    /* Countdown */
-    .base-timer {
-        position: relative;
-        width: 300px;
-        height: 300px;
-    }
-
-    .base-timer__svg {
-        transform: scaleX(-1);
-    }
-
-    .base-timer__circle {
-        fill: none;
-        stroke: none;
-    }
-
-    .base-timer__path-elapsed {
-        stroke-width: 7px;
-        stroke: grey;
-    }
-
-    .base-timer__path-remaining {
-        stroke-width: 7px;
-        stroke-linecap: round;
-        transform: rotate(90deg);
-        transform-origin: center;
-        transition: 1s linear all;
-        fill-rule: nonzero;
-        stroke: currentColor;
-    }
-
-    .base-timer__path-remaining.green {
-        color: rgb(65, 184, 131);
-    }
-
-    .base-timer__path-remaining.orange {
-        color: orange;
-    }
-
-    .base-timer__path-remaining.red {
-        color: red;
-    }
-
-    .base-timer__label {
-        position: absolute;
-        width: 300px;
-        height: 300px;
-        top: 0;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        font-size: 100px;
-    }
-</style>
